# ITKTubeTK

./: .dockerignore  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  CTestConfig.cmake  CTestCustom.cmake.in  Copyright.txt  Dockerfile-cuda-itk-vtk-sem-af  Dockerfile-tubetk-applications  LICENSE.md  README.md  README.txt  Readme.md  SuperBuild.cmake  appveyor.yml  azure-pipelines.yml  circle.yml  config.yml  itk-module-init.cmake  itk-module.cmake  package.json  pyproject.toml  requirements-ml.txt  requirements.txt  setup-readme.md  setup.py
Applications/: CMakeLists.txt  README.md  TubeTKModules.cmake  generate_slicer_cli_list_json.py
Applications/AtlasBuilderUsingIntensity/: AtlasBuilderUsingIntensity.cxx  AtlasBuilderUsingIntensity.xml  AtlasSummation.cxx  AtlasSummation.h  CMakeLists.txt  itkCompleteImageResampleFilter.h  itkCompleteImageResampleFilter.hxx  itkCompleteImageResampleFilter.txx  itkMeanAndSigmaImageBuilder.h  itkMeanAndSigmaImageBuilder.txx  itkMinimizeImageSizeFilter.h  itkMinimizeImageSizeFilter.hxx  itkMinimizeImageSizeFilter.txx  itkRobustMeanAndSigmaImageBuilder.h  itkRobustMeanAndSigmaImageBuilder.txx  itktubeCompleteImageResampleFilter.h  itktubeCompleteImageResampleFilter.hxx  itktubeMeanAndSigmaImageBuilder.h  itktubeMeanAndSigmaImageBuilder.hxx  itktubeMinimizeImageSizeFilter.h  itktubeMinimizeImageSizeFilter.hxx  itktubeRobustMeanAndSigmaImageBuilder.h  itktubeRobustMeanAndSigmaImageBuilder.hxx  tubeAtlasSummation.cxx  tubeAtlasSummation.h
Applications/AtlasSummation/: CMakeLists.txt  itkMeanAndSigmaImageBuilder.txx  itkMinimizeImageSizeFilter.txx  itkRobustMeanAndSigmaImageBuilder.txx
Applications/CLI/: CMakeLists.txt  tubeCLIHelperFunctions.h
Applications/ClipTubes/: CMakeLists.txt  ClipTubes.cxx  ClipTubes.xml  README.md
Applications/ComputeBinaryImageSimilarityMetrics/: CMakeLists.txt  ComputeBinaryImageSimilarityMetrics.cxx  ComputeBinaryImageSimilarityMetrics.xml  README.md
Applications/ComputeImageQuantiles/: CMakeLists.txt  ComputeImageQuantiles.cxx  ComputeImageQuantiles.xml  README.md  tubeImageQuantiles.cxx
Applications/ComputeImageSimilarityMetrics/: CMakeLists.txt  ComputeImageSimilarityMetrics.cxx  ComputeImageSimilarityMetrics.xml  README.md  tubeComputeImageSimilarity.cxx  tubeComputeImageSimilarity.xml
Applications/ComputeImageStatistics/: CMakeLists.txt  ComputeImageStatistics.cxx  README.md
Applications/ComputeImageStatisticsUsingMask/: CMakeLists.txt  ComputeImageStatisticsUsingMask.cxx  ComputeImageStatisticsUsingMask.xml
Applications/ComputeImageToTubeRigidMetricImage/: CMakeLists.txt  ComputeImageToTubeRigidMetricImage.cxx  ComputeImageToTubeRigidMetricImage.xml
Applications/ComputeRegionSignatures/: CMakeLists.txt  ComputeRegionSignatures.cxx  ComputeRegionSignatures.xml  README.md
Applications/ComputeSegmentTubesParameters/: CMakeLists.txt  ComputeSegmentTubesParameters.cxx  ComputeSegmentTubesParameters.xml  README.md
Applications/ComputeTrainingMask/: CMakeLists.txt  ComputeTrainingMask.cxx  ComputeTrainingMask.xml  README.md
Applications/ComputeTubeFlyThroughImage/: .ComputeTubeFlyThroughImage.cxx.kate-swp  CMakeLists.txt  ComputeTubeFlyThroughImage.cxx  ComputeTubeFlyThroughImage.xml  README.md
Applications/ComputeTubeGraphProbability/: CMakeLists.txt  ComputeTubeGraphProbability.cxx  ComputeTubeGraphProbability.xml  tubeGraphProbability.xml
Applications/ComputeTubeGraphSimilarityKernelMatrix/: CMakeLists.txt  ComputeTubeGraphSimilarityKernelMatrix.cxx  ComputeTubeGraphSimilarityKernelMatrix.xml  GraphKernel.cxx  README.md  tubeShortestPathKernel.cxx  tubeShortestPathKernel.h  tubeWLSubtreeKernel.cxx  tubeWLSubtreeKernel.h
Applications/ComputeTubeMeasures/: CMakeLists.txt  ComputeTubeMeasures.cxx  README.md
Applications/ComputeTubeProbability/: CMakeLists.txt  ComputeTubeProbability.cxx  ComputeTubeProbability.xml  tubeDensityProbability.xml
Applications/ComputeTubeTortuosityMeasures/: CMakeLists.txt  ComputeTubeTortuosityMeasures.cxx  ComputeTubeTortuosityMeasures.xml  README.md
Applications/Convert4DImageTo3DImages/: CMakeLists.txt  Convert4DImageTo3DImages.cxx
Applications/ConvertCSVToImages/: CMakeLists.txt  ConvertCSVToImages.cxx  README.md
Applications/ConvertDICOMSeriesToImages/: CMakeLists.txt  ConvertDICOMSeriesToImages.cxx  README.md
Applications/ConvertImagesToCSV/: CMakeLists.txt  ConvertImagesToCSV.cxx
Base/: CMakeLists.txt  tubeCLIHelperFunctions.h  tubetkParseImageInformation.h
Examples/: CMakeLists.txt  Demo-ITKSpatialObjects.ipynb  Demo-ImageRegistration.ipynb  PythonVirtualEnvInstall.cmake.in  README.md
ITKModules/: CMakeLists.txt
Testing/: CMakeLists.txt
TubeTKLib/: CMakeLists.txt  CTestConfig.cmake
Utilities/: CMakeLists.txt  EvaluteIPythonNotebook.py  ImageCompareCommand.cxx  JsonCompareCommand.cxx  PrintSelfCheck.py  PrintSelfCheck.tcl  README.md  SetupForDevelopment.sh  TextCompareCommand.cxx  TubeTKLogo.h  evalipnb.py  itkDifferenceImageFilter2.h  itkDifferenceImageFilter2.txx  itkFilterWatcher.h  tubeCLIFilterWatcher.h  tubeCLIHelperFunctions.h  tubeCLIProgressReporter.h  tubeCLISharedLibraryWrapper.cxx  tubeMacro.h  tubeMessage.h  tubeStringUtilities.h  tubeTestMain.h
examples/: CMakeLists.txt  ComputeVesselProbabilityImageFromBrainMRIs.ipynb  ConvertTubesToImage.ipynb  Data-Download.sh  Demo-ConvertTubesToImage.ipynb  Demo-ConvertTubesToPolyData.ipynb  Demo-ITKSpatialObjects.ipynb  Demo-ImageRegistration.ipynb  Demo-ManipulateTubes.ipynb  Demo-VisualReport.ipynb  DownloadExampleData.sh  ITKSpatialObjects-SimpleExample.ipynb  ImageRegistration.ipynb  README.md  SegmentBrainFromMRIs.ipynb  SegmentVesselFromBrainMRI.ipynb  SegmentVesselsFromBrainMRA.ipynb  SegmentVesselsFromMRIs.ipynb  TubeNumPyArrayAndPropertyHistograms.ipynb
python/: CMakeLists.txt
src/: CMakeLists.txt  Common.cmake  Filtering.cmake  IO.cmake  MetaIO.cmake  Numerics.cmake  ObjectDocuments.cmake  README.md  Registration.cmake  Segmentation.cmake  VTK.cmake  itkTubeTK_fake_library_src.cxx  itkTubeTK_fake_library_src.h
test/: CMakeLists.txt  azure-pipelines.yml
(+5391 files in other folders)
